<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/lbl_forgot_password"
                android:textColor="@color/input_register"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/forgot_password_msg"
                android:textColor="@color/input_register"
                android:textSize="14dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/hint_mobile"
                    android:inputType="number"
                    android:maxLength="10"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@drawable/edittext_border"
                    android:textColor="@color/hederbackground"
                    android:textColorHint="@color/hederbackground"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_reset_password"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:text="@string/btn_reset_password"
                android:background="@drawable/view_dropshadow2"
                android:textColor="@color/whitetextcolor" />

            <LinearLayout
                android:id="@+id/layout_update_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="20dp"
                        android:hint="@string/hint_password"
                        android:padding="10dp"
                        android:inputType="numberPassword"
                        android:maxLength="10"
                        android:background="@drawable/edittext_border"
                        android:textColor="@color/hederbackground"
                        android:textColorHint="@color/hederbackground"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Login Button -->

                <Button
                    android:id="@+id/btn_update_password"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dip"
                    android:text="UDATE PASSWORD"
                    android:layout_gravity="center"
                    android:background="@drawable/view_dropshadow2"
                    android:textColor="@color/whitetextcolor"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@null"
                android:text="@string/btn_back"
                android:layout_gravity="center"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/Link_color" />

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>