<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/whitetextcolor"
    android:padding="10dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/Black"
                android:textColorHint="@color/Black"
                app:passwordToggleTint="@color/Black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittextmobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_border"
                    android:hint="@string/phone"
                    android:inputType="number"
                    android:padding="10sp"
                    android:textColor="@color/hederbackground"
                    android:textColorHint="@color/hederbackground" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/Black"
                android:textColorHint="@color/Black"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/Black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittextpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_border"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10sp"
                    android:textColor="@color/hederbackground"
                    android:textColorHint="@color/hederbackground" />
            </com.google.android.material.textfield.TextInputLayout>






            <Button
                android:id="@+id/buttongenerateotp"
                style="@style/DefaultButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
                android:background="@drawable/view_dropshadow2"
                android:text="Generate OTP"
                android:textColor="@color/whitetextcolor" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:backgroundTint="@color/Black"
                android:textColorHint="@color/Black"
                app:passwordToggleTint="@color/Black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittextenterotp"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/edittext_border"
                    android:gravity="center"
                    android:hint="Enter OTP"
                    android:padding="10dp"
                    android:textColor="@color/hederbackground"
                    android:inputType="number"
                    android:textColorHint="@color/hederbackground" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txttermsandconditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="Terms and Conditions !"
                android:textColor="#0000A0"
                android:textSize="14dp" />

            <Button
                android:id="@+id/buttonsubmit"
                style="@style/DefaultButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@drawable/view_dropshadow2"
                android:text="@string/register"
                android:textColor="@color/whitetextcolor" />

            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/back_to_login"
                android:textColor="@color/input_register_hint" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>